adding shenandoah